--- a/Assignment 1/Assignment 1.csproj
+++ b/Assignment 1/Assignment 1.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Controllers\AddTenController.cs" />
     <Compile Include="Controllers\GreetingController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\HostingCostController.cs" />
     <Compile Include="Controllers\SquareController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
